# friday-studio

./: .DEV_FEEDBACK.md  .dockerignore  .editorconfig  .env.ci  .env.example  .gitattributes  .gitignore  .golangci.yml  .mcp.json  ADVANCED_PLANNING.md  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION_REFACTOR_PLAN.md  CONTEXT.md  CONTRIBUTING.md  CONVERSATIONAL_UX.md  CONVERSATION_MEMORY_TASK.md  CX_CLIENT_SERVER_ARCHITECTURE.md  Dockerfile  Dockerfile-platform  ENVIRONMENTS.md  EULA.txt  GETTING_STARTED.md  IMPORT_VALIDATION.md  LICENSE  LICENSE-EULA.html  LICENSE-EULA.rtf  MCP_FIXES_ANALYSIS.md  MCP_LIBRARY.md  MCP_TESTING_SUMMARY.md  MCP_TOOL_SEPARATION.md  NOTICE  QUALITY_ASSESSMENT_IMPROVEMENT_PLAN.md  QUICK_REFERENCE.md  README.md  REASONING_ARCHITECTURE_REDESIGN.md  REASONING_FIXES.md  (+70 more)
.claude/: settings.json
.github/: CODEOWNERS  TEST_TRIGGER.md  actionlint.yaml  dependabot.yml
.husky/: post-checkout
.opencode/: opencode.db-shm  opencode.db-wal
.zed/: settings.json
Absolute Path Workspace/: workspace.yml
My Workspace & Co. (v2.0)/: workspace.yml
Nested Test Workspace/: workspace.yml
Test Workspace Current/: workspace.yml
agents/: README.md
ai-agent-analysis/: workspace.yml
analytics/: README.md
apps/atlas-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/atlas-installer/src-tauri/capabilities/: default.json
apps/atlas-installer/src-tauri/src/: lib.rs  main.rs
apps/studio-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio-installer/src-tauri/capabilities/: default.json
apps/studio-installer/src-tauri/icons/: icon.icns
apps/studio-installer/src-tauri/src/: friday_home.rs  lib.rs  main.rs  test_support.rs
apps/studio-installer/src-tauri/src/commands/: check_running.rs  create_app_bundle.rs  delete_partial.rs  download.rs  download_checkpoint.rs  download_tls.rs  ensure_agent_browser_chrome.rs  ensure_claude_code.rs  env_file.rs  exit_installer.rs  extract.rs  fetch_manifest.rs  fetch_sha256.rs  installed_marker.rs  launch.rs  migrate.rs  mod.rs  platform.rs  prewarm_agent_sdk.rs  startup.rs  stop_running_launcher.rs  verify.rs  wait_health.rs
apps/studio-installer/src-tauri/tests/: launcher_handoff.rs  migrate_test.rs  write_env_creates_friday_yml.rs
apps/web-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-client/src-tauri/capabilities/: default.json
apps/web-client/src-tauri/icons/: icon.icns
apps/web-client/src-tauri/src/: lib.rs
chat-replay/: README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
codebase-secvuln-analyses/: workspace.yml
default-workspace/: workspace.yml
docker/: package.json  run-platform.sh
docs/: ACTOR_INTEGRATION_TESTING_PROGRESS.md  ACTOR_MIGRATION_ANALYSIS.md  ACTOR_TYPE_SAFETY_PLAN.md  ADVANCED_PLANNING.md  AGENT_COMMAND_REGISTRY_UPDATE_PLAN.md  AGENT_SUPERVISION_ARCHITECTURE.md  ARCHITECTURE.md  ARTIFACTS_ARCHITECTURE.md  ATLAS_AUTH_MIGRATION_PLAN.md  ATLAS_AUTH_USER_JOURNEY.md  ATLAS_CONVERSATIONAL_AGENT_PROMPT.md  ATLAS_DAEMON_ARCHITECTURE_REDESIGN.md  ATLAS_MARKETING.md  ATLAS_MCP_SERVER_IMPLEMENTATION_PLAN.md  ATLAS_MONOREPO_MIGRATION_PLAN.md  AUTO_UPDATE_PLAN.md  BUNDLE_DIAGNOSTICS_IMPLEMENTATION.md  BUNDLE_TAURI_APP_IMPLEMENTATION.md  CLIENT_MIGRATION_PLAN.md  CLI_BEST_PRACTICES.md  CLI_MODULAR_ARCHITECTURE_PATTERNS.md  CLI_POWER_USER_GUIDE.md  CLI_SHORTHANDS.md  CLI_UX_IMPROVEMENT_PLAN.md  COALA_MEMORY_MODEL_GUIDELINES.md  COMPREHENSIVE_ATLAS_EXAMPLE.yml  COMPREHENSIVE_FRIDAY_EXAMPLE.yml  COMPREHENSIVE_WORKSPACE_EXAMPLE_V2.yml  CONFIGURATION_ARCHITECTURE.md  CONFIG_LOADER_ADAPTER_PLAN.md  CONFIG_LOADER_MIGRATION_PLAN.md  CONFIG_V2_STRICT_OBJECT_ANALYSIS.md  CONVERSATIONAL_UI_IMPLEMENTATION_PLAN.md  CONVERSATION_AGENT_TYPE_SAFETY_ANALYSIS.md  CONVERSATION_SUPERVISOR_BATCH_OPERATIONS_ENHANCEMENT.md  CONVERSATION_SUPERVISOR_DEBUGGING_AND_UX.md  CONVERSATION_SUPERVISOR_WORKSPACE_CREATION_ENHANCEMENT_V2.md  CONVERSATION_TASK_EXECUTION_DESIGN.md  CONVERSATION_TASK_EXECUTION_MVP.md  CONVERSATION_WORKSPACE_CREATION_MIGRATION.md  (+71 more)
examples/: README.md  acp-remote-agent-config.yml  example-claude.ts  example-streaming.ts  example.ts  vector-memory-retrieval-demo.ts  vector-search-demo.ts
getting-started/: workspace.yml
integration-tests/: INTEGRATION_TESTS_INVENTORY.md  README.md  agent-cancellation.test.ts  agent-tool-format-compatibility.test.ts  atlas-client-e2e.test.ts  config-flow.integration.test.ts  config-loader-migration.test.ts  configuration-architecture.test.ts  conversation-agent-streamid.test.ts  draft-e2e-workflow.test.ts  exponential-backoff.integration.test.ts  fs-watch-signal.integration.test.ts  jeopardy-validator.test.ts  llm-provider-tool-integration.test.ts  mcp-pool-integration.test.ts  mcp-pool-real-servers.test.ts  mcp-tools-integration.test.ts  mcp-tools-real-server.test.ts  reasoning-llm-simple.test.ts  reasoning-llm-tools.test.ts  session-supervisor-integration.test.ts  session-supervisor-planning-complex.test.ts  session-supervisor-planning-simple.test.ts  telemetry-integration.test.ts  validate-workspace-discovery.test.ts  workspace-add-e2e.test.ts  workspace-add-yaml-name-e2e.test.ts  workspace-configurations-validation.test.ts  workspace-creation.test.ts  workspace-draft-integration.test.ts
kentest1/: workspace.yml
kentest2/: workspace.yml
kentest3/: workspace.yml
kentest4/: workspace.yml
kentest5/: workspace.yml
lcf-yena-gooooooo/: workspace.yml
my-first-atlas-workspace/: workspace.yml
notion-content-fetcher/: workspace.yml
patches/: 03-session-failed-sentry-fingerprinting.patch.md  04-workspace-not-found-downgrade-log.patch.md  05-user-config-errors-sentry-filter.patch.md
plans/: user-agent-sdk-cohesion.md
qa-reports/: task-15-nested-tool-call-qa.md
rca/: 2026-02-09-github-app-reconnect-privilege-escalation.md
reports/: .gitkeep  knip-report.md  typescript-errors-report.md
reviews/: add-output-schemas-to-registry.md  artifact-ref-resolution.md
scripts/: README.md  backfill-sha256.sh  build-deb.sh  build-fast.sh  build-macos.sh  build-platform.sh  build-rpm.sh  (+39 more)
(+4565 files in other folders)
