[package]
name = "atlas-installer"
version = "1.0.0"
description = "Cross-platform installer for Atlas CLI"
authors = ["Tempest Labs, Inc."]
edition = "2021"

[lib]
name = "atlas_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
