[package]
name = "atlas-installer"
version = "1.0.0"
description = "Cross-platform installer for Atlas CLI"
authors = ["Tempest Labs, Inc."]
edition = "2021"

[lib]
name = "atlas_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[patch.crates-io]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
glib-macros = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
gio-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
pango-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/gtk-rs-core.git", tag = "0.21.3" }
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gtk-sys = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gtk3-macros = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gdk-sys = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
atk = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
atk-sys = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gdkx11 = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gdkx11-sys = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
gdkwayland-sys = { git = "https://github.com/gtk-rs/gtk3-rs.git", branch = "master" }
