[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Security Note: This project has a transitive dependency on glib 0.18.x through
# webkit2gtk (Linux only), which has a medium severity vulnerability (GHSA-wrw7-89jp-8q8g).
# The vulnerability is fixed in glib 0.20.0+, but webkit2gtk 2.0.1 still depends on 
# glib 0.18.x. This issue only affects Linux builds.
# Tracking upstream fix at: https://github.com/tauri-apps/webkit2gtk-rs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
